# Siggraph-2026-Scheduler

./: .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  README.md  README.txt  check_page.py  index.html  pyproject.toml  siggraph2026-catalog.json
assets/data/: siggraph2026-catalog.json
js/: app.js  qr.js
styles/: app.css
tests/: check_page.py
tools/: refresh_siggraph.py
